--- a/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -49,7 +49,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -93,7 +93,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
