--- a/src/app/pages/menu-page/dish-category-bar/fried-rice-claypot-rice/fried-rice-claypot-rice.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/fried-rice-claypot-rice/fried-rice-claypot-rice.component.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -52,7 +52,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -94,7 +94,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -135,7 +135,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -177,7 +177,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -217,7 +217,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -259,7 +259,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -302,7 +302,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -345,7 +345,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -386,7 +386,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -429,7 +429,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
