--- a/src/app/pages/menu-page/dish-category-bar/meat/meat.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/meat/meat.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -48,7 +48,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -91,7 +91,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -131,7 +131,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -174,7 +174,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -214,7 +214,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -257,7 +257,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -297,7 +297,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -340,7 +340,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -381,7 +381,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -424,7 +424,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -464,7 +464,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -507,7 +507,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
