--- a/src/app/pages/menu-page/dish-category-bar/mix-match-combo-bundles/mix-match-combo-bundles.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/mix-match-combo-bundles/mix-match-combo-bundles.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -59,7 +59,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -103,7 +103,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
