--- a/src/app/pages/menu-page/dish-category-bar/top-selling-single-set-meal/top-selling-single-set-meal.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/top-selling-single-set-meal/top-selling-single-set-meal.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -49,7 +49,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -91,7 +91,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -131,7 +131,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -174,7 +174,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
@@ -214,7 +214,7 @@
   </div>
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
