--- a/src/app/pages/menu-page/dish-category-bar/ultimate-seabass-is-here/ultimate-seabass-is-here.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/ultimate-seabass-is-here/ultimate-seabass-is-here.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
-      <mat-card>
+      <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
             <div class="col-8">
