feat: make horizontal bar scrollable

--- a/src/app/pages/menu-page/dish-category-bar/dish-category-bar.component.scss
+++ b/src/app/pages/menu-page/dish-category-bar/dish-category-bar.component.scss
@@ -1,7 +1,9 @@
-.dc-menu--horizontal-bar {
+.dc-menu-horizontal-bar {
   list-style-type: none;
   overflow: hidden;
-
+  display: flex;
+  white-space: nowrap;
+  overflow-x: scroll;
   &__list {
     float: left;
   }
