--- a/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.html
+++ b/src/app/pages/menu-page/dish-category-bar/first-list/first-list.component.html
@@ -93,6 +93,7 @@
 <div class="row">
   <div class="col-xl">
     <div class="dc-menu-card-list__mat-card">
+      <div class="dc-menu-card__card-padding"></div>
       <mat-card style="z-index: -1">
         <mat-card-content>
           <div class="row">
