--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -2,6 +2,11 @@
   justify-content: space-between;
   padding-top: 14px;
 
+  &__search-bar {
+    width: 490px;
+    padding: 8px 16px 8px 40px;
+  }
+
   &__row {
     flex-wrap: nowrap;
   }
