--- a/src/app/common/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/common/side-nav-bar/side-nav-bar.component.html
@@ -40,7 +40,12 @@
           <span class="dc-nav__faqs-text"><p>Become a Rider</p></span></a
         >
         <a class="d-md-none dc-nav__faqs" href=""
-          ><img src="assets\svg\nav-svgs\eat.svg" height="24" width="24" />
+          ><img
+            src="assets\svg\nav-svgs\eat.svg"
+            alt="eat"
+            height="24"
+            width="24"
+          />
           <span class="dc-nav__faqs-text"><p>Add your restaurant</p></span></a
         >
         <a class="d-md-none dc-nav__faqs" href=""
