feat: add search icon inside of the input field

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -11,7 +11,11 @@
         <div class="d-flex">
           <div class="row" *ngIf="isMenuPage">
             <div>
-              <img src="assets/svg/header/search.svg" alt="search-icon" />
+              <img
+                src="assets/svg/header/search.svg"
+                alt="search-icon"
+                class="dc-header__search-img"
+              />
               <input
                 class="dc-header__search-bar"
                 matInput
