--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -7,6 +7,13 @@
     padding: 8px 16px 8px 40px;
   }
 
+  &__search-img {
+    position: absolute;
+    margin-top: 11px;
+    margin-left: 11px;
+    width: 22px;
+  }
+
   &__row {
     flex-wrap: nowrap;
   }
