feat: menu page above horizontal bar responsiveness fixed

--- a/src/app/pages/menu-page/menu-page.component.html
+++ b/src/app/pages/menu-page/menu-page.component.html
@@ -10,90 +10,92 @@
       >
     </div>
     <div class="row">
-      <div class="d-flex col-4">
+      <div class="d-flex col-xl-4 col-md-4">
         <img
           src="assets\images\card-chef.jpg"
           alt="menu"
           class="dc-menu__main-img"
         />
       </div>
-      <div class="d-flex col-5">
+      <div class="d-flex col-xl-8 col-md-8">
         <div class="row">
-          <h1 class="dc-menu__heading">A-One Signature - Chinatown Point</h1>
-          <div>
-            <span>Chinese </span>
-            <span>·Noodles </span>
-            <span>·Singaporean</span>
-          </div>
-          <div>
-            <span class="col">Opens at 10:30 </span>
-            <span class="col">·$12.00 minimum</span>
-            <span class="col"> ·$3.00 delivery</span>
-          </div>
-          <div>
-            <button class="dc-menu__info-button">
-              <div>
-                <div class="d-flex">
-                  <img
-                    src="assets\images\menu-page\information.svg"
-                    alt="information-svg"
-                    class="dc-menu__info-img"
-                  />
-                  <div>
-                    <span class="dc-menu__text1">Info</span>
-                    <span class="dc-menu__text2">Allergens and more</span>
+          <div class="col-xl-8">
+            <h1 class="dc-menu__heading">A-One Signature - Chinatown Point</h1>
+            <div>
+              <span>Chinese </span>
+              <span>·Noodles </span>
+              <span>·Singaporean</span>
+            </div>
+            <div>
+              <span class="col">Opens at 10:30 </span>
+              <span class="col">·$12.00 minimum</span>
+              <span class="col"> ·$3.00 delivery</span>
+            </div>
+            <div>
+              <button class="dc-menu__info-button">
+                <div>
+                  <div class="d-flex">
+                    <img
+                      src="assets\images\menu-page\information.svg"
+                      alt="information-svg"
+                      class="dc-menu__info-img"
+                    />
+                    <div>
+                      <span class="dc-menu__text1">Info</span>
+                      <span class="dc-menu__text2">Allergens and more</span>
+                    </div>
+                    <img
+                      src="assets\images\menu-page\arrow-next.svg"
+                      alt="arrow"
+                      class="dc-menu__next-icon"
+                    />
                   </div>
-                  <img
-                    src="assets\images\menu-page\arrow-next.svg"
-                    alt="arrow"
-                    class="dc-menu__next-icon"
-                  />
                 </div>
-              </div>
-            </button>
-          </div>
-          <div>
-            <button class="dc-menu__review-button">
-              <div>
-                <div class="d-flex">
-                  <img
-                    src="assets\images\menu-page\star.svg"
-                    alt="information-svg"
-                    class="dc-menu__info-img"
-                  />
-                  <div>
-                    <span class="dc-menu__text1">4.3 Very good</span>
-                    <span class="dc-menu__text2">See all 500 reviews</span>
+              </button>
+            </div>
+            <div>
+              <button class="dc-menu__review-button">
+                <div>
+                  <div class="d-flex">
+                    <img
+                      src="assets\images\menu-page\star.svg"
+                      alt="information-svg"
+                      class="dc-menu__info-img"
+                    />
+                    <div>
+                      <span class="dc-menu__text1">4.3 Very good</span>
+                      <span class="dc-menu__text2">See all 500 reviews</span>
+                    </div>
+                    <img
+                      src="assets\images\menu-page\arrow-next.svg"
+                      alt="arrow"
+                      class="dc-menu__next-icon"
+                    />
                   </div>
-                  <img
-                    src="assets\images\menu-page\arrow-next.svg"
-                    alt="arrow"
-                    class="dc-menu__next-icon"
-                  />
                 </div>
-              </div>
-            </button>
+              </button>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="d-flex col-3">
-        <div class="row d-flex">
-          <a href="" class="dc-menu__deliver">
-            <img
-              src="assets\images\menu-page\fast-food-delivery.svg"
-              alt="delivery-icon"
-              class="dc-menu__deliver-icon"
-            />
-            <span class="dc-menu__location-text">No location selected</span>
-            <span class="dc-menu__change-text">Change</span>
-          </a>
-          <button mat-stroked-button class="dc-menu__group-order-btn">
-            <img
-              src="assets\images\menu-page\group.svg"
-              alt="group-svg"
-              class="dc-menu__group-img"
-            />Start group order
-          </button>
+          <div class="d-flex col-xl-3">
+            <div class="row d-flex">
+              <a href="" class="dc-menu__deliver">
+                <img
+                  src="assets\images\menu-page\fast-food-delivery.svg"
+                  alt="delivery-icon"
+                  class="dc-menu__deliver-icon"
+                />
+                <span class="dc-menu__location-text">No location selected</span>
+                <span class="dc-menu__change-text">Change</span>
+              </a>
+              <button mat-stroked-button class="dc-menu__group-order-btn">
+                <img
+                  src="assets\images\menu-page\group.svg"
+                  alt="group-svg"
+                  class="dc-menu__group-img"
+                />Start group order
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
