--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header *ngIf="!isMenuPage">
   <div class="container dc-header">
     <div class="row dc-header__row">
       <div class="d-flex dc-header__flex">
@@ -8,22 +8,6 @@
             alt="deliveroo-logo"
             style="width: 144px; height: 32px"
         /></a>
-        <div class="d-flex">
-          <div class="row" *ngIf="isMenuPage">
-            <div>
-              <img
-                src="assets/svg/header/search.svg"
-                alt="search-icon"
-                class="dc-header__search-img"
-              />
-              <input
-                class="dc-header__search-bar"
-                matInput
-                placeholder="Search"
-              />
-            </div>
-          </div>
-        </div>
         <div class="d-flex dc-header__flex">
           <div style="padding-right: 4px">
             <button
@@ -96,6 +80,58 @@
               Signup or login
             </button>
           </div>
+          <div style="padding-left: 4px">
+            <button
+              mat-stroked-button
+              class="dc-header__button"
+              (click)="toggle()"
+              style="margin-bottom: 3px"
+            >
+              <img
+                src="assets\svg\menu.svg"
+                alt="menu"
+                height="15px"
+                width="15px"
+                style="margin-bottom: 3px"
+              />
+              Menu
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr />
+</header>
+
+<!-- This header only works in the menu route -->
+<header *ngIf="isMenuPage">
+  <div class="container dc-header">
+    <div class="row dc-header__row">
+      <div class="d-flex dc-header__flex">
+        <a routerLink="/"
+          ><img
+            src="assets\svg\deliveroo-logo.svg"
+            alt="deliveroo-logo"
+            style="width: 144px; height: 32px"
+        /></a>
+        <div class="d-flex">
+          <div class="row">
+            <div>
+              <img
+                src="assets/svg/header/search.svg"
+                alt="search-icon"
+                class="dc-header__search-img"
+              />
+              <input
+                class="dc-header__search-bar"
+                matInput
+                placeholder="Search"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="d-flex dc-header__flex">
           <div style="padding-left: 4px">
             <button
               mat-stroked-button
