feat: menu page above horizontal line responsiveness fixed

--- a/src/app/pages/menu-page/menu-page.component.scss
+++ b/src/app/pages/menu-page/menu-page.component.scss
@@ -54,6 +54,7 @@
 
   &__deliver {
     text-decoration: none;
+    margin-bottom: 15px;
   }
 
   &__deliver-icon {
@@ -72,6 +73,7 @@
 
   &__group-order-btn {
     background-color: #fff;
+    margin-bottom: 15px;
   }
 
   &__group-img {
