--- a/src/app/pages/menu-page/menu-page.component.html
+++ b/src/app/pages/menu-page/menu-page.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="d-flex col-xl-8 col-md-8">
         <div class="row">
-          <div class="col-xl-8">
+          <div class="col-xl-7">
             <h1 class="dc-menu__heading">A-One Signature - Chinatown Point</h1>
             <div>
               <span>Chinese </span>
@@ -76,7 +76,7 @@
               </button>
             </div>
           </div>
-          <div class="d-flex col-xl-3">
+          <div class="col-xl-5">
             <div class="row d-flex">
               <a href="" class="dc-menu__deliver">
                 <img
@@ -87,7 +87,10 @@
                 <span class="dc-menu__location-text">No location selected</span>
                 <span class="dc-menu__change-text">Change</span>
               </a>
-              <button mat-stroked-button class="dc-menu__group-order-btn">
+              <button
+                mat-stroked-button
+                class="d-none d-sm-block dc-menu__group-order-btn"
+              >
                 <img
                   src="assets\images\menu-page\group.svg"
                   alt="group-svg"
