--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,6 +1,6 @@
 <header *ngIf="!isMenuPage">
   <div class="container dc-header">
-    <div class="row dc-header__row">
+    <div class="row">
       <div class="d-flex dc-header__flex">
         <a routerLink="/"
           ><img
@@ -106,32 +106,28 @@
 
 <!-- This header only works in the menu route -->
 <header *ngIf="isMenuPage">
-  <div class="container dc-header">
-    <div class="row dc-header__row">
-      <div class="d-flex dc-header__flex">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm col-md-2 dc-header">
         <a routerLink="/"
           ><img
             src="assets\svg\deliveroo-logo.svg"
             alt="deliveroo-logo"
             style="width: 144px; height: 32px"
         /></a>
-        <div class="d-flex">
-          <div class="row">
-            <div>
-              <img
-                src="assets/svg/header/search.svg"
-                alt="search-icon"
-                class="dc-header__search-img"
-              />
-              <input
-                class="dc-header__search-bar"
-                matInput
-                placeholder="Search"
-              />
-            </div>
-          </div>
+      </div>
+      <div class="col-sm col-md-8">
+        <div class="row">
+          <img
+            src="assets/svg/header/search.svg"
+            alt="search-icon"
+            class="dc-header__search-img"
+          />
+          <input class="dc-header__search-bar" matInput placeholder="Search" />
         </div>
-        <div class="d-flex dc-header__flex">
+      </div>
+      <div class="col-sm col-md-2">
+        <div class="dc-header__flex">
           <div style="padding-left: 4px">
             <button
               mat-stroked-button
@@ -153,5 +149,6 @@
       </div>
     </div>
   </div>
+
   <hr />
 </header>
