--- a/src/app/pages/menu-page/menu-page.component.html
+++ b/src/app/pages/menu-page/menu-page.component.html
@@ -110,8 +110,8 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-8"><app-restaurant-menu></app-restaurant-menu></div>
-      <div class="col-4"><app-basket></app-basket></div>
+      <div class="col-xl-8"><app-restaurant-menu></app-restaurant-menu></div>
+      <div class="col-xl-4 d-none d-xl-block"><app-basket></app-basket></div>
     </div>
   </div>
 </div>
