--- a/src/app/pages/menu-page/dish-category-bar/dish-category-bar.component.scss
+++ b/src/app/pages/menu-page/dish-category-bar/dish-category-bar.component.scss
@@ -3,7 +3,9 @@
   overflow: hidden;
   display: flex;
   white-space: nowrap;
-  overflow-x: scroll;
+  overflow-x: auto;
+  padding-top: 10px;
+  margin-bottom: unset;
   &__list {
     float: left;
   }
@@ -16,4 +18,7 @@
     padding: 2px 16px;
     font-size: 14px;
   }
+}
+.dc-menu-horizontal-bar::-webkit-scrollbar {
+  width: 0;
 }
