feat: change deliveroo-clone-web to foodie

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12 col-sm-6 col-md-3" style="padding-top: 20px">
         <div class="dc-footer__card h-100">
-          <h3 class="dc-footer__title">Discover Deliveroo</h3>
+          <h3 class="dc-footer__title">Discover Foodie</h3>
           <ul class="dc-footer__list">
             <li>
               <a href="#!" class="dc-footer__text">Investors</a>
@@ -39,9 +39,7 @@
               <a href="#!" class="dc-footer__text">Become a rider</a>
             </li>
             <li>
-              <a href="#!" class="dc-footer__text"
-                >Deliveroo Talent Directory</a
-              >
+              <a href="#!" class="dc-footer__text">Foodie Talent Directory</a>
             </li>
           </ul>
         </div>
@@ -92,7 +90,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-3" style="padding-top: 20px">
         <div class="dc-footer__card h-100">
-          <h3 class="dc-footer__title">Take Deliveroo with you</h3>
+          <h3 class="dc-footer__title">Take Foodie with you</h3>
           <ul class="dc-footer__list">
             <li>
               <a
@@ -162,7 +160,7 @@
           </li>
         </ul>
         <div class="d-flex justify-content: space-betwee">
-          <p class="dc-footer__para">© 2023 Deliveroo</p>
+          <p class="dc-footer__para">© 2023 Foodie</p>
         </div>
       </div>
     </div>
