--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -2,11 +2,11 @@
   <div class="container dc-header">
     <div class="row">
       <div class="d-flex dc-header__flex">
-        <a routerLink="/"
+        <a routerLink="/" class="dc-header__foodie-logo"
           ><img
-            src="assets\svg\deliveroo-logo.svg"
+            src="assets/svg/foodie logo - no background.svg"
             alt="deliveroo-logo"
-            style="width: 144px; height: 32px"
+            style="width: 144px; height: 49px"
         /></a>
         <div class="d-flex dc-header__flex">
           <div style="padding-right: 4px">
@@ -108,12 +108,13 @@
 <header *ngIf="isMenuPage">
   <div class="container">
     <div class="row dc-header">
-      <div class="col-sm col-md-2" style="margin-top: 10px">
+      <div class="col-sm col-md-2">
         <a routerLink="/"
           ><img
-            src="assets\svg\deliveroo-logo.svg"
-            alt="deliveroo-logo"
-            style="width: 144px; height: 32px"
+            src="assets/svg/foodie logo - no background.svg"
+            alt="foodie-logo"
+            class="dc-header__menu-header-logo"
+            style="width: 144px; height: 49px"
         /></a>
       </div>
       <div class="col-sm col-md-8">
