--- a/src/app/common/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/common/side-nav-bar/side-nav-bar.component.html
@@ -11,8 +11,8 @@
         <div class="col dc-nav__nav-icons">
           <a href="">
             <img
-              src="assets\svg\deliveroo-logo.svg"
-              alt="deliveroo-logo"
+              src="assets/svg/foodie logo - no background.svg"
+              alt="foodie-logo"
               height="32px"
             />
           </a>
