--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -4,7 +4,7 @@
       <div class="row dc-home__lpgrow">
         <h1 class="dc-home__landingh1">
           Restaurant food, takeaway and groceries.
-          <span style="color: #00ccbc">Delivered.</span>
+          <span style="color: #d61212">Delivered.</span>
         </h1>
         <div class="dc-home__searchbar">
           <div class="row">
@@ -26,7 +26,11 @@
                       placeholder="e.g. EC4R 3TE"
                     />
                     <div class="dc-home__btn">
-                      <button mat-stroked-button class="dc-home__search-btn">
+                      <button
+                        mat-stroked-button
+                        class="dc-home__search-btn"
+                        style="background-color: #d61212"
+                      >
                         Search
                       </button>
                     </div>
