--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -21,11 +21,7 @@
         Continue with Apple
       </button>
       <p class="dc-login__line">or</p>
-      <button
-        mat-button
-        class="dc-login__button--green"
-        (click)="onLoadSignin()"
-      >
+      <button mat-button class="dc-login__button--red" (click)="onLoadSignin()">
         <img src="assets\svg\email-icon.svg" alt="Email" height="24px" /><a
           href=""
         ></a>
