--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -45,8 +45,8 @@
       height: 48px;
     }
 
-    &--green {
-      background-color: #00ccbc;
+    &--red {
+      background-color: #d61212;
       margin-top: 14px;
       margin-bottom: 14px;
       font-weight: 600;
