--- a/src/app/common/side-nav-bar/side-nav-bar.component.scss
+++ b/src/app/common/side-nav-bar/side-nav-bar.component.scss
@@ -5,7 +5,7 @@
   }
   &__signup {
     margin-top: 10px;
-    background-color: #00ccbc;
+    background-color: #ba2222;
     min-height: 48px;
     padding: 12px 24px;
     font-weight: 600;
@@ -43,7 +43,7 @@
   }
 
   &__faqs-text:hover {
-    color: #00ccbc;
+    color: #ba2222;
   }
 
   &__lables {
