feat: add images to the cards in home page

--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -156,21 +156,21 @@
   }
 
   &__mat-card01 {
-    background-image: url("/../assets/images/chefs.png");
+    background-image: url("/../assets/images/chefs2.png");
     background-size: cover;
     border-radius: 10px;
     height: 480px;
   }
 
   &__mat-card02 {
-    background-image: url("/../assets/images/delivery-girl.png");
+    background-image: url("/../assets/images/delivery-girl1.png");
     background-size: cover;
     border-radius: 10px;
     height: 480px;
   }
 
   &__mat-card03 {
-    background-image: url("/../assets/images/food-table1.png");
+    background-image: url("/../assets/images/food-table3.png");
     background-size: cover;
     border-radius: 10px;
     height: 480px;
@@ -202,6 +202,6 @@
 
   &__matcard-paragraph {
     font-size: 18px;
-    color: #e34406;
+    color: #fff;
   }
 }
